syntax = "proto3";

package yourdailyword;

option java_package = "com.minkyu.yourdailyword.common.protos";
option java_multiple_files = true;
option java_outer_classname = "PairingInfoProto";

message PairingInfo {
	string hostAddress = 1;
	int32 port = 2;
}
